--- a/app/views/admin/exams/edit.html.erb
+++ b/app/views/admin/exams/edit.html.erb
@@ -5,6 +5,6 @@
 <%= render 'form' %>
 
 <% content_for :footer do %>
-<%= render partial: 'admin/exams/back' %>
-<%= submit_tag 'Save exam config', form: 'exam_form', class: 'ms-auto btn btn-primary' %>
+Note: nothing is autosaved.
+<%= submit_tag 'Save templates', form: 'exam_form', class: 'ms-auto btn btn-primary' %>
 <% end %>
