--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,7 @@ $min-contrast-ratio: 3;
 $enable-negative-margins: true;
 $link-decoration: none;
 
-$enable-grid-classes: false;
+$enable-grid-classes: true;
 $enable-cssgrid: true;
 
 @import "_katex";
