--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -22,7 +22,7 @@
 <% end %>
 
 <%= menu_group 'Course' do %>
-	<%= menu_link 'Exams...', admin_exams_path, icon: 'droplet', target: 'modal' %>
+	<%= menu_link 'Exams', admin_exams_path, icon: 'droplet' %>
 	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', target: 'modal' %>
 	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', target: 'modal' %>
 	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', target: 'modal' %>
@@ -63,12 +63,6 @@
 <% end %>
 
 <% end%>
-
-<% if Settings.exam_show_personal %>
-<%= menu_group 'Exam code' do %>
-    <span class="dropdown-item-text"><%= current_user.pin %></span>
-<% end %>
-<% end %>
 
 <% if !logged_in? %>
 <% if Auth::PinController.available? %>
