--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -97,12 +97,14 @@
         </td>
         <% if GitRepo.any? %>
         <td>
-            <%= link_to bootstrap_icon('git'), user.git_repos.first.url, target: '_new' if user.git_repos.any? %>
+            <% if user.git_repos.any? %>
+            <%= link_to bootstrap_icon('git'), user.git_repos.first.url, target: '_new' %>
             <%= link_to \
                 make_label('git', 'git', false),
                 user.git_repos.first,
                 class: "grade-button btn btn-sm",
                 data: { trigger: "modal", "turbo-frame" => "modal" } %>
+            <% end %>
         </td>
         <% end %>
         <% @overview.each do |name, psets| %>
