--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -10,29 +10,33 @@
         <th></th>
         <% end %>
 
-        <% @overview.each do |name, psets| %>
-        <% psets.each_with_index do |(pset, weight), index| %>
-        <th style="<%= 'border-left: 1.5px solid black;' if index==0 %>">
-            <div class="dropdown">
-                <button id="overviewsTableColumnDropdown" class="btn px-1 py-0 btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="overviewsTableColumnDropdown">
-                    <li><h6 class="dropdown-header"><%= pset.name %></h6></li>
-                    <li>
-                        <%= link_to "Publish all", publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, class: 'small dropdown-item' %>
-                    </li>
-                    <li>
-                        <%= link_to "Run checks for all", recheck_schedule_submits_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Run checks for all submits for this assignment?" }, class: 'small dropdown-item' %>
-                    </li>
-                    <hr>
-                    <% groups.each do |group, user_list|%>
-                    <% if group %>
-                    <%= link_to "Unpublish for #{group.name}", reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, class: 'small dropdown-item' %>
-                    <% end %>
-                    <% end %>
-                </ul>
-            </div>
-        </th>
-        <% end %>
+        <% @overview.each do |name, flag, psets| %>
+            <% if flag == :blocks %>
+                <th></th>
+            <% else %>
+                <% psets.each_with_index do |(pset, weight), index| %>
+                <th style="<%= 'border-left: 1.5px solid black;' if index==0 %>">
+                    <div class="dropdown">
+                        <button id="overviewsTableColumnDropdown" class="btn px-1 py-0 btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="overviewsTableColumnDropdown">
+                            <li><h6 class="dropdown-header"><%= pset.name %></h6></li>
+                            <li>
+                                <%= link_to "Publish all", publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, class: 'small dropdown-item' %>
+                            </li>
+                            <li>
+                                <%= link_to "Run checks for all", recheck_schedule_submits_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Run checks for all submits for this assignment?" }, class: 'small dropdown-item' %>
+                            </li>
+                            <hr>
+                            <% groups.each do |group, user_list| %>
+                            <% if group %>
+                            <%= link_to "Unpublish for #{group.name}", reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, class: 'small dropdown-item' %>
+                            <% end %>
+                            <% end %>
+                        </ul>
+                    </div>
+                </th>
+                <% end %>
+            <% end %>
         <% end %>
     </tr>
     <% end %>
@@ -46,15 +50,22 @@
         <th>git</th>
         <% end %>
 
-        <% @overview.each do |group, psets| %>
-        <th colspan="<%= psets.length %>" style="border-left: 1.5px solid black;">
-            <%= group.humanize %>
-        </th>
+        <% @overview.each do |group, flag, psets| %>
+            <% if flag == :blocks %>
+            <th style="border-left: 1.5px solid black; width: 3rem;">
+                <%= group.titleize.split.last.first(5) %>
+            </th>
+            <% else %>
+            <th colspan="<%= psets.length %>"
+                style="border-left: 1.5px solid black;">
+                <%= group.humanize %>
+            </th>
+            <% end %>
         <% end %>
     </tr>
 
     <%# actual students, in groups %>
-    <% groups.each do |group, user_list|%>
+    <% groups.each do |group, user_list| %>
     <tr>
         <th class="py-2" colspan="2">
             <% if group %>
@@ -107,12 +118,16 @@
             <% end %>
         </td>
         <% end %>
-        <% @overview.each do |name, psets| %>
+        <% @overview.each do |name, flag, psets| %>
+            <% if flag == :blocks %>
+                <%= render partial: 'submits_block', locals: { user: user, name: name, flag: flag, psets: psets } %>
+            <% else %>
             <% psets.each_with_index do |(pset, weight), index| %>
                 <td class="<%= grade_bg_type(@subs[[pset.id, user.id]].grade) if @subs[[pset.id, user.id]].present? %>"
                     style="<%= 'border-left: 1.5px solid black;' if index==0 %>">
                     <%= grade_button(user, pset, @subs[[pset.id, user.id]], weight, true, true) %>
                 </td>
+            <% end %>
             <% end %>
         <% end %>
     </tr>
