--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 						<div class="card-body">
 							<div class="p-1">
 								<% cache @student do %>
-								<% @overview.each do |name, psets| %>
+								<% @overview.each do |name, flag, psets| %>
 								<p class="mb-1">
 									<strong><%= name.humanize %></strong>
 								</p>
