--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div id="navbar"
-    class="navbar navbar-expand-md flex-wrap column-gap-3 row-gap-2 justify-items-start dropdown">
+    class="navbar navbar-expand-md flex-wrap column-gap-3 row-gap-2 justify-items-start dropdown" style="grid-area: navbar;">
 
     <% unless Settings.hands_only && !current_user.senior? || !logged_in? %>
         <button class="navbar-toggler" type="button"
