--- a/app/views/users/_attendance.html.erb
+++ b/app/views/users/_attendance.html.erb
@@ -2,7 +2,8 @@
 grid = AttendanceGridPresenter.new(
   config: current_user.grading_config.settings,
   first_attendance: current_user.attendance_records.first&.cutoff&.to_date,
-  counts: @attend
+  counts: @attend,
+  confirmed_counts: @attend_confirmed
 )
 %>
 
