--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
 
 	<div class="tab-pane show" id="submit-attendance" role="tabpanel" aria-labelledby="submit-attendance-tab">
 		<p>Last seen: <%= @student.last_seen_at&.to_fs(:long) %></p>
-		<%= render 'attendance' %>
+		<%= render partial: 'attendance', locals: { student: @student } %>
 	</div>
 
 	<div class="tab-pane show" id="submit-hands" role="tabpanel" aria-labelledby="submit-hands-tab">
